# rhoai-ops-graph

./: .dockerignore  .gitignore  Containerfile  Makefile  README.md  agent.py  app.py  compose.prod.yml  compose.yml  config.env.template  mcp_servers.template.json  prompt_config.py  pyproject.toml  run.sh
agents/: analysis_agent.py  interactive_agent.py  langgraph.json  prompt_config.py
agents/helpers/: __init__.py  config.py  middleware.py  subagents.py
agents/jenkins_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: dev.env.template  prod.env.template
containers/: Containerfile.agents  Containerfile.chat-ui
k8s/ops-buddy/: Chart.yaml  values.template.yaml
k8s/ops-buddy/templates/: _helpers.tpl  chat-ui-deployment.yaml  cluster-monitor-deployment.yaml  configmap.yaml  jenkins-mcp-deployment.yaml  langgraph-server-deployment.yaml  networkpolicy.yaml  oauth-client.yaml  postgres-deployment.yaml  pull-secret.yaml  redis-deployment.yaml  route.yaml  secret.yaml  serviceaccount.yaml
